Bug 119788 - a11y: Distinguish between role STATIC and new role NOTIFICATION
Summary: a11y: Distinguish between role STATIC and new role NOTIFICATION
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: accessibility
Depends on:
Blocks: a11y-Linux 117173
  Show dependency treegraph
 
Reported: 2018-09-10 15:13 UTC by Samuel Thibault
Modified: 2022-09-26 15:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Thibault 2018-09-10 15:13:06 UTC
Description:
As a refinement for https://bugs.documentfoundation.org/show_bug.cgi?id=116542 , it would be useful to use the NOTIFICATION atk role.

Steps to Reproduce:
1. Open Edit->Find&Replace
2. Type some text in the find field
3. Type enter
4. Look at the role for the "Search key not found" widget in accerciser

Actual Results:
Role is "static" (in git master)

Expected Results:
Role should be "notification"


Reproducible: Always


User Profile Reset: No



Additional Info:
The use case is described in  https://gitlab.gnome.org/GNOME/orca/issues/12 : in the find&replace dialog, for the screen reader to know that it should speak the search result, that widget should have role notification instead of just static.

Apparently Libreoffice does not have a notification role yet, but it could be introduced just like static was introduced in 4917430c1c5e8105987e81d65d31df21955ad60e . The remaining question is which MSAA or IA2 role that should be mapped to.
Comment 1 Buovjaga 2018-10-03 15:47:50 UTC
-> NEW
Comment 2 Samuel Thibault 2019-06-11 15:52:34 UTC
Also, 

“when this item becomes shown it [shall] emit object:state-changed:showing”
Comment 3 Commit Notification 2022-09-26 03:55:46 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/947fe0d89dee75ee43515ef7dfb43837d65a45bc

tdf#119788 tdf#117173 add accessibility NOTIFICATION role

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2022-09-26 15:11:40 UTC
@Jim: Thanks for implementing this! Closing as FIXED.