tdf#119788 tdf#117173 add accessibility NOTIFICATION role

and use it to make screen readers announce notifications from the
'Find and Replace' dialog

Change-Id: Ifcf9304883e2e824ea1b7998d7767e474b87c8b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139709
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>