winaccessibility/source/service/AccObjectWinManager.cxx
@@ -732,6 +732,7 @@ AccObjectWinManager::CreateAccEventListener(XAccessible* pXAcc)
         case AccessibleRole::ICON:
         case AccessibleRole::LABEL:
         case AccessibleRole::STATIC:
+        case AccessibleRole::NOTIFICATION:
         case AccessibleRole::MENU_ITEM:
         case AccessibleRole::CHECK_MENU_ITEM:
         case AccessibleRole::RADIO_MENU_ITEM:
